Update put contents to their own pages

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kim Sumilang</title>
+    <title>Contact - Kim Sumilang</title>
     
     <!-- Tailwind CSS (Use CDN properly) -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -50,10 +50,18 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4" id="home">
-        <h1 class="text-4xl md:text-5xl text-white leading-tight my-9" style="font-family: 'Lexend', sans-serif;">Kim Benedict Sumilang</h1>
-        <img src="pictures/homepage-picture.png" alt="Profile Image" class="w-48 md:w-96 h-48 md:h-96 rounded-full border-4 border-white shadow-lg mt-6">
+    <!-- Contact Section -->
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4">
+        <h2 class="text-3xl font-bold text-white" style="font-family: 'Lexend', sans-serif;">Contact Me!</h2>
+        <p class="text-lg text-white mt-4" style="font-family: 'Lexend', sans-serif;">Check out my profiles:</p>
+        <div class="flex flex-col space-y-4 mt-6">
+            <a href="https://www.linkedin.com/in/kim-sumilang-240280354/" target="_blank">
+                <img src="pictures/linkedin-logo.png" alt="LinkedIn" class="w-16">
+            </a>
+            <a href="https://github.com/RyotaKim" target="_blank">
+                <img src="pictures/github-logo.png" alt="GitHub" class="w-16">
+            </a>
+        </div>
     </div>
 
     <!-- External JavaScript Libraries -->
