--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kim Sumilang</title>
+    <title>About - Kim Sumilang</title>
     
     <!-- Tailwind CSS (Use CDN properly) -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -50,10 +50,13 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4" id="home">
-        <h1 class="text-4xl md:text-5xl text-white leading-tight my-9" style="font-family: 'Lexend', sans-serif;">Kim Benedict Sumilang</h1>
-        <img src="pictures/homepage-picture.png" alt="Profile Image" class="w-48 md:w-96 h-48 md:h-96 rounded-full border-4 border-white shadow-lg mt-6">
+    <!-- About Section -->
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4">
+        <img src="pictures/aboutme.jpg" alt="About Image" class="w-64 md:w-80 h-64 md:h-80 object-cover rounded-lg shadow-lg mt-6 my-5">
+        <h2 class="text-3xl font-bold text-white" style="font-family: 'Lexend', sans-serif;">About Me</h2>
+        <p class="mt-4 text-lg text-white bg-opacity-50 border-2 rounded-lg w-3/4 md:w-1/2 px-6 py-3" style="font-family: 'Lexend', sans-serif;">Hi, I'm Kim! I'm currently a student at SDCA, pursuing a Bachelor of Science in Information Technology (BSIT). My passion for technology and problem-solving drives me to explore the world of software development.
+            As a future software engineer, I am dedicated to expanding my skills in coding and creating innovative solutions. I believe in continuous learning, and I'm excited to apply my knowledge to build software that can make a positive impact.
+            I am always looking for opportunities to grow and collaborate on exciting projects, and I'm eager to connect with like-minded individuals and industry professionals who share the same passion for technology!</p>
     </div>
 
     <!-- External JavaScript Libraries -->
