--- a/tech-stack.html
+++ b/tech-stack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kim Sumilang</title>
+    <title>Tech Stack - Kim Sumilang</title>
     
     <!-- Tailwind CSS (Use CDN properly) -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -50,10 +50,36 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4" id="home">
-        <h1 class="text-4xl md:text-5xl text-white leading-tight my-9" style="font-family: 'Lexend', sans-serif;">Kim Benedict Sumilang</h1>
-        <img src="pictures/homepage-picture.png" alt="Profile Image" class="w-48 md:w-96 h-48 md:h-96 rounded-full border-4 border-white shadow-lg mt-6">
+    <!-- Tech Stack Section -->
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4">
+        <h2 class="text-3xl font-bold text-white" style="font-family: 'Lexend', sans-serif;">Tech Stack</h2>
+        <div class="flex flex-wrap justify-center items-center gap-6 mt-6">
+            <!-- HTML Icon -->
+            <div class="tech-item relative group">
+                <img src="pictures/html.png" alt="HTML" class="w-14 h-14 hover:scale-125 transition-transform duration-300" title="HTML">
+                <span class="absolute inset-0 flex justify-center items-center text-white text-sm opacity-0 group-hover:opacity-100 bg-black bg-opacity-50 rounded-lg transition-opacity duration-300">HTML</span>
+            </div>
+            <!-- CSS Icon -->
+            <div class="tech-item relative group">
+                <img src="pictures/css.png" alt="CSS" class="w-14 h-14 hover:scale-125 transition-transform duration-300" title="CSS">
+                <span class="absolute inset-0 flex justify-center items-center text-white text-sm opacity-0 group-hover:opacity-100 bg-black bg-opacity-50 rounded-lg transition-opacity duration-300">CSS</span>
+            </div>
+            <!-- JavaScript Icon -->
+            <div class="tech-item relative group">
+                <img src="pictures/js.png" alt="JavaScript" class="w-14 h-14 hover:scale-125 transition-transform duration-300" title="JavaScript">
+                <span class="absolute inset-0 flex justify-center items-center text-white text-sm opacity-0 group-hover:opacity-100 bg-black bg-opacity-50 rounded-lg transition-opacity duration-300">JavaScript</span>
+            </div>
+            <!-- C Icon -->
+            <div class="tech-item relative group">
+                <img src="pictures/c.png" alt="C" class="w-14 h-14 hover:scale-125 transition-transform duration-300" title="C">
+                <span class="absolute inset-0 flex justify-center items-center text-white text-sm opacity-0 group-hover:opacity-100 bg-black bg-opacity-50 rounded-lg transition-opacity duration-300">C</span>
+            </div>
+            <!-- C++ Icon -->
+            <div class="tech-item relative group">
+                <img src="pictures/cpp.png" alt="C++" class="w-14 h-14 hover:scale-125 transition-transform duration-300" title="C++">
+                <span class="absolute inset-0 flex justify-center items-center text-white text-sm opacity-0 group-hover:opacity-100 bg-black bg-opacity-50 rounded-lg transition-opacity duration-300">C++</span>
+            </div>
+        </div>
     </div>
 
     <!-- External JavaScript Libraries -->
