Update used the official vscode icon, added margin and padding

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
     </nav>
 
     <!-- About Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4">
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4 pb-16 md:pb-24">
         <img src="pictures/aboutme.jpg" alt="About Image" class="w-64 md:w-80 h-64 md:h-80 object-cover rounded-lg shadow-lg mt-6 my-5">
         <h2 class="text-3xl font-bold text-white" style="font-family: 'Lexend', sans-serif;">About Me</h2>
         
