--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
     </nav>
 
     <!-- Contact Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4">
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4 pb-16 md:pb-24">
         <h2 class="text-3xl font-bold text-white" style="font-family: 'Lexend', sans-serif;">Contact Me!</h2>
         <p class="text-lg text-white mt-4" style="font-family: 'Lexend', sans-serif;">Check out my profiles:</p>
         <div class="flex flex-col space-y-4 mt-6">
