--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4" id="home">
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4 pb-16 md:pb-24" id="home">
         <h1 class="text-4xl md:text-5xl text-white leading-tight my-9" style="font-family: 'Lexend', sans-serif;">Kim Benedict Sumilang</h1>
         <img src="pictures/homepage-picture.png" alt="Profile Image" class="w-48 md:w-96 h-48 md:h-96 rounded-full border-4 border-white shadow-lg mt-6">
     </div>
