--- a/tech-stack.html
+++ b/tech-stack.html
@@ -95,7 +95,7 @@
     </nav>
 
     <!-- Tech Stack Section -->
-    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4">
+    <div class="min-h-screen w-full flex flex-col justify-center items-center text-center relative z-10 px-4 pb-16 md:pb-24">
         <h2 class="text-3xl font-bold text-white" style="font-family: 'Lexend', sans-serif;">Tech Stack</h2>
         
         <!-- Responsive grid container for tech icons with fixed positioning on desktop -->
